--- a/package.json
+++ b/package.json
@@ -18,22 +18,28 @@
   },
   "homepage": "https://github.com/Chinchillo/PolishStreetNames#readme",
   "dependencies": {
+    "3": "^2.1.0",
+    "-": "0.0.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^7.7.0",
     "framer-motion": "^1.7.3",
+    "jquery": "^1.9.1",
+    "leaflet": "^1.3.1",
+    "leaflet.markercluster": "^1.4.1",
     "react": "16.12.0",
     "react-bootstrap": "^1.0.0",
     "react-container-dimensions": "^1.4.1",
     "react-dom": "16.12.0",
     "react-dropdown-date": "0.0.18",
-    "react-leaflet-markercluster": "^2.0.0",
+    "react-leaflet": "^1.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-toastify": "^5.5.0",
-    "regenerator-runtime": "^0.13.5"
+    "regenerator-runtime": "^0.13.5",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -44,10 +50,8 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "cross-env": "^6.0.3",
     "css-loader": "3.4.0",
+    "file-loader": "^6.0.0",
     "jsdoc": "^3.6.3",
-    "leaflet": "^1.6.0",
-    "leaflet.markercluster": "^1.4.1",
-    "react-leaflet": "^2.7.0",
     "style-loader": "1.1.2",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
