--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/Chinchillo/PolishStreetNames/issues"
   },
-  "homepage": "https://github.com/Chinchillo/PolishStreetNames#readme",
+  "homepage": "https://Chinchillo.github.io/PolishStreetNames/",
   "dependencies": {
     "3": "^2.1.0",
     "-": "0.0.1",
@@ -51,6 +51,7 @@
     "cross-env": "^6.0.3",
     "css-loader": "3.4.0",
     "file-loader": "^6.0.0",
+    "gh-pages": "^2.2.0",
     "jsdoc": "^3.6.3",
     "style-loader": "1.1.2",
     "webpack": "4.41.5",
