--- a/package.json
+++ b/package.json
@@ -29,15 +29,18 @@
     "jquery": "^1.9.1",
     "leaflet": "^1.3.1",
     "leaflet.markercluster": "^1.4.1",
-    "react": "16.12.0",
+    "react": "16.13.0",
     "react-bootstrap": "^1.0.0",
     "react-container-dimensions": "^1.4.1",
     "react-dom": "16.12.0",
     "react-dropdown-date": "0.0.18",
-    "react-leaflet": "^1.4.0",
+    "react-minimal-pie-chart": "^8.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-toastify": "^5.5.0",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-vis": "^1.11.7",
+    "react-wordcloud": "^1.2.3",
     "regenerator-runtime": "^0.13.5",
     "styled-components": "^5.1.0"
   },
@@ -56,7 +59,7 @@
     "style-loader": "1.1.2",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.10.1"
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
