--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-vis": "^1.11.7",
     "react-wordcloud": "^1.2.3",
+    "recharts": "^1.8.5",
     "regenerator-runtime": "^0.13.5",
     "styled-components": "^5.1.0"
   },
