--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dotenv-webpack": "^1.7.0",
     "firebase": "^7.7.0",
     "framer-motion": "^1.7.3",
-    "jquery": "^1.9.1",
+    "jquery": ">=3.5.0",
     "leaflet": "^1.3.1",
     "leaflet.markercluster": "^1.4.1",
     "react": "16.13.0",
