--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dropdown-date": "0.0.18",
     "react-minimal-pie-chart": "^8.0.1",
     "react-router-dom": "^5.1.2",
+    "react-scroll": "^1.8.1",
     "react-toastify": "^5.5.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-vis": "^1.11.7",
