--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,6 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
-  #pull_request:
-    #branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  #workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,20 +17,20 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-        - name: 🚚 Get latest code
+        - name: Get latest code
           uses: actions/checkout@v2.3.2
 
-        - name: Use Node.js 12
+        - name: Use Node.js
           uses: actions/setup-node@v2-beta
           with:
-            node-version: '12'
+            node-version: '10.16.0'
 
-        - name: 🔨 Build Project
+        - name: Build Project
           run: |
             npm install
             npm run build
 
-        - name: 📂 Sync files
+        - name: Sync files
           uses: SamKirkland/FTP-Deploy-Action@4.0.0
           with:
             server: aleksander-brueckner-zentrum.org
