--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,4 @@ jobs:
             server: aleksander-brueckner-zentrum.org
             username: p216914f1
             password: ${{ secrets.FTP_PASSWORD }}
+            local-dir:  ./dist/
