--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Custom_CI
+name: My_CI
 
 # Controls when the action will run. 
 on:
@@ -17,7 +17,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-        - name: Get latest code
+        - name: Checkout master branch
           uses: actions/checkout@v2.3.2
 
         - name: Use Node.js
@@ -30,7 +30,7 @@ jobs:
             npm install
             npm run build
 
-        - name: Sync files
+        - name: Upload files
           uses: SamKirkland/FTP-Deploy-Action@4.0.0
           with:
             server: aleksander-brueckner-zentrum.org
