--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "dependencies": {
     "3": "^2.1.0",
     "-": "0.0.1",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "dotenv-webpack": "^1.7.0",
@@ -36,6 +39,7 @@
     "react-minimal-pie-chart": "^8.0.1",
     "react-router-dom": "^5.1.2",
     "react-scroll": "^1.8.1",
+    "react-test-renderer": "^17.0.1",
     "react-toastify": "^5.5.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-vis": "^1.11.7",
@@ -47,8 +51,8 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-runtime": "^6.23.0",
     "cross-env": "^6.0.3",
@@ -65,8 +69,11 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack",
+    "test": "jest --coverage",
     "deploy": "gh-pages -d dist",
-    "publish": "npm run build && npm run deploy",
     "gen_docs": "./node_modules/.bin/jsdoc -r ./src"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
