--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,6 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "transform-es2015-modules-commonjs"
+    "@babel/plugin-proposal-class-properties"
   ]
 }
