--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gh-pages": "^2.2.0",
     "jest": "^26.6.3",
     "jsdoc": "^3.6.3",
+    "react-test-renderer": "^17.0.1",
     "style-loader": "1.1.2",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
