--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "css-loader": "3.4.0",
     "file-loader": "^6.0.0",
     "gh-pages": "^2.2.0",
+    "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "jsdoc": "^3.6.3",
     "react-test-renderer": "^17.0.1",
